[package]
name = "waterfall"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
uuid = { version = "0.5.1", features = ["serde", "v4"] }
rand = "0.8.5"
dashmap = "3.11.10"

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1"
